--- a/m/index.html
+++ b/m/index.html
@@ -12,7 +12,7 @@
     <form action="">
     <input type="number" min = "0" max="100" name="hi" id="abcd"/>
     <h2>{%hi%}</h2>
-    <input style="background-color: brown; color: gainsboro; width: 150px; height: 70px;font-size: larger;font-weight: bolder;" type="button"  onclick="location.href='http://localhost:3000/restart'" value="NEW GAME"/>
+    <input style="background-color: brown; color: gainsboro; width: 150px; height: 70px;font-size: larger;font-weight: bolder;" type="button"  onclick="location.href='/restart'" value="NEW GAME"/>
 </form>
     
 </div>
